--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -1,6 +1,8 @@
 <nav>
     <ul>
-        <li><a href="#" title="Home">Home</a></li>
-        <li><a href="#" title="Test">Test</a></li>
+        <li><a href="{{ path('main-home') }}" title="Home">Home</a></li>
+        <li><a href="{{ path('main-test') }}" title="Test">Test</a></li>
+        <li><a href="{{ path('serie_list') }}" title="All series">Series</a></li>
+        <li><a href="{{ path('serie_create') }}" title="Test">Create</a></li>
     </ul>
 </nav>
