--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -1,8 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <section>
-        todo:afficher les series
+    <section class="series-list">
+        {% for serie in series %}
+        <article>
+            <a href="#" title="View details">
+                <img src="{{asset('img/posters/series/' ~ serie.poster)}}" alt="{{ serie.name}}">
+            </a>
+        </article>
+        {% endfor %}
     </section>
 {% endblock %}
 
