--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -4,7 +4,7 @@
     <section class="series-list">
         {% for serie in series %}
         <article>
-            <a href="#" title="View details">
+            <a href="{{ path('serie_details', {'id': serie.id}) }}" title="View details">
                 <img src="{{asset('img/posters/series/' ~ serie.poster)}}" alt="{{ serie.name}}">
             </a>
         </article>
