--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,8 @@
 
     <link rel="icon" href="{{asset('img/icon.png')}}">
 
+    {% block extrastyles %} {% endblock%}
+
 </head>
 <body>
     <div class="container">
@@ -22,6 +24,15 @@
         <h1><a href="{{path('main-home')}}"><img src="{{asset('img/logo.svg')}}" alt="Series !"></a></h1>
         {% include ('inc/nav.html.twig')%}
     </header>
+
+        {# read and display all flash messages #}
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="flash flash-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
 
     <main>
         {% block body %} {% endblock%}
