--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -3,6 +3,7 @@
         <li><a href="{{ path('main-home') }}" title="Home">Home</a></li>
         <li><a href="{{ path('main-test') }}" title="Test">Test</a></li>
         <li><a href="{{ path('serie_list') }}" title="All series">Series</a></li>
-        <li><a href="{{ path('serie_create') }}" title="Test">Create</a></li>
+        <li><a href="{{ path('serie_create') }}" title="Create a new serie">Create serie</a></li>
+        <li><a href="{{ path('season_create') }}" title="Create a new season">Create season</a></li>
     </ul>
 </nav>
