--- a/templates/serie/create.html.twig
+++ b/templates/serie/create.html.twig
@@ -7,7 +7,13 @@
 
 {% block body %}
     <div>
-        {# todo: afficher le formulaire de creation #}
+        {{ form_start(serieForm) }}
+
+        {{ form_widget(serieForm) }}
+        <br>
+        <button>Create !</button>
+
+        {{ form_end(serieForm) }}
     </div>
 {% endblock %}
 
