--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -3,7 +3,22 @@
         <li><a href="{{ path('main-home') }}" title="Home">Home</a></li>
         <li><a href="{{ path('main-test') }}" title="Test">Test</a></li>
         <li><a href="{{ path('serie_list') }}" title="All series">Series</a></li>
-        <li><a href="{{ path('serie_create') }}" title="Create a new serie">Create serie</a></li>
-        <li><a href="{{ path('season_create') }}" title="Create a new season">Create season</a></li>
+        {% if app.user %}
+            <li><a href="{{ path('serie_create') }}" title="Create a new serie">Create serie</a></li>
+            <li><a href="{{ path('season_create') }}" title="Create a new season">Create season</a></li>
+            <li class="nav-right"><a href="{{ path('app_logout') }}" title="logout">Logout ( {{ app.user.firstname }}
+                    )</a></li>
+
+            {% if is_granted("ROLE_ADMIN") %}
+                <li><a href="{{ path('admin_dashboard') }}" title="Admin dashboard">Admin</a></li>
+            {% endif %}
+        {% else %}
+            <li class="nav-right"><a href="{{ path('app_login') }}" title="login">Login</a> | <a
+                        href="{{ path('app_register') }}" title="register">Register</a></li>
+        {% endif %}
+
     </ul>
+    <div>
+
+    </div>
 </nav>
