--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,23 +38,16 @@ main {
     flex: 1;
 }
 
-nav ul {
+.nav-bar {
     display: flex;
-    list-style: none;
-    padding-left: 0;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
-
-nav li {
-    margin-right: 1rem;
+.nav-left a{
+    margin-right: 15px;
 }
-
-.nav-right{
-    position: absolute;
-    right: 15%;
-    margin: fill;
-    display: flex;
-    gap: 10px;
-    flex-direction: row;
+.nav-right a{
+    margin-left: 15px;
 }
 
 .series-list {
